--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
         <header>
             <nav>
                 <% if user_signed_in? %>
-                <strong><%= link_to 'ユーザーページ', pages_show_path %></strong>
+                <strong><%= link_to 'メモをする',memo_path %></strong>
                 <%= link_to 'プロフィール変更', edit_user_registration_path %>
                 <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
             <% else %>
