--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,5 @@
-<h1>ようこそ</h1>
-<p>トップページです。</p>
+<h1>メモ一覧</h1>
+
+<% @memos.each do |memo| %>
+	<%= link_to(memo.content, "/show/#{memo.id}") %>
+<% end %>
