編集機能追加

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,5 @@
 <h1>メモ一覧</h1>
 
 <% @memos.each do |memo| %>
-	<%= link_to(memo.content, "/show/#{memo.id}") %>
+	<%= link_to(memo.content, "/memo/#{memo.id}") %>
 <% end %>
