--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,5 +1,10 @@
 <h1>編集ページ</h1>
+
+
 <%= form_tag("/memo/#{@memo.id}/update") do %>
+	 <% @memo.errors.full_messages.each do |message| %>
+              <%= message %>
+     <% end %>
 	<textarea name="content"><%= @memo.content %></textarea>
 	<input type="submit" name="保存">
 <% end %>
