--- a/app/views/pages/memo.html.erb
+++ b/app/views/pages/memo.html.erb
@@ -1,6 +1,9 @@
 <h1>メモを書く</h1>
 
 <%= form_tag("/create") do %>
+	 <% @memo.errors.full_messages.each do |message| %>
+              <%= message %>
+     <% end %>
 	<textarea name="content"></textarea>
 	<input type="submit" name="保存">
 <% end %>
