--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,27 +3,17 @@
   <head>
     <title>MemoApp</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= render 'layouts/shim' %>
   </head>
 
   <body>
-        <header>
-            <nav>
-                <% if user_signed_in? %>
-                <strong><%= link_to 'メモをする',memo_path %></strong>
-                <%= link_to 'メモ一覧',index_path %>
-                <%= link_to 'プロフィール変更', edit_user_registration_path %>
-                <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
-            <% else %>
-                <%= link_to 'サインアップ', new_user_registration_path %>
-                <%= link_to 'ログイン', new_user_session_path %>
-                <% end %>
-            </nav>
-        </header>
-       <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
+    <%= render 'layouts/header' %>
+    <%= render 'layouts/alert' %>
+  <div class="container">
     <%= yield %>
+    <%= render 'layouts/footer' %>
+  </div>
   </body>
 </html>
