--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,7 @@
-<footer class="footer">
-	<small>
-		© 2018 MEMO
-	</small>
-</footer>
+<div class="container">
+	<footer class="footer">
+		<small>
+			© 2018 MEMO
+		</small>
+	</footer>
+</div>
