基本機能完成

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,10 +6,9 @@
             <% if user_signed_in? %>
               <li><%= link_to 'メモをする',memo_path %></li>
               <li><%= link_to 'メモ一覧',index_path %></li>
-              <li><%= link_to 'プロフィール変更', edit_user_registration_path %></li>
               <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
             <% else %>
-              <li><%= link_to 'サインアップ', new_user_registration_path %></li>
+              <li><%= link_to 'ユーザー登録', new_user_registration_path %></li>
               <li><%= link_to 'ログイン', new_user_session_path %></li>
             <% end %>
           </ul>
