--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -56,7 +56,7 @@ p {
   padding-top: 9px;
   font-weight: bold;
   &:hover {
-    color: white;
+    color: aqua;
     text-decoration: none;
   }
 }
@@ -68,7 +68,7 @@ footer {
     width: 100%;
     small {
     	float: left;
-    	margin: 0% 40%;
+    	margin: 0% 35%;
     }
 }
 
