--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,8 +4,8 @@
       <nav>
           <ul class="nav navbar-nav navbar-right">
             <% if user_signed_in? %>
-              <li><%= link_to 'メモをする',memo_path %></li>
-              <li><%= link_to 'メモ一覧',index_path %></li>
+              <li><%= link_to 'メモをする',new_memo_path %></li>
+              <li><%= link_to 'メモ一覧',memos_path %></li>
               <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
             <% else %>
               <li><%= link_to 'ユーザー登録', new_user_registration_path %></li>
