--- a/app/views/memos/show.html.erb
+++ b/app/views/memos/show.html.erb
@@ -14,6 +14,6 @@
 	<input type="text" class="form-control" placeholder=<%= @memo.created_at %>>
 </div>
 <div class="edit-btn">
-	<button class="btn btn-default"><%= link_to('編集する',"/memo/#{@memo.id}/edit") %></button>
-	<button class="btn btn-default"><%= link_to('削除する',"/memo/#{@memo.id}/destroy",{method: "post"}) %></button>
+	<button class="btn btn-default"><%= link_to('編集する',edit_memo_path) %></button>
+	<button class="btn btn-default"><%= link_to('削除する',url_for(action: :destroy),{method: "post"}) %></button>
 </div>
